frontend/test/should_pass/external_model_001.gm
node class A {
    val:int;
}

node class B<test.BImpl> extends A
{
    kartoffel:string;
}
