frontend/test/should_fail/deque_model_001.gm
node class A
{
	intValue: int;
	stringValue: string;
	intDeque: deque<int>;
	stringDeque: deque<string>;
	const constIntDeque: deque<int>;
	const constStringDeque: deque<string>;
}